# doppelganger

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
docker/: substrate-dev.Dockerfile  substrate.Dockerfile
docs/: Doppelganger_Design_v0.1.docx  Doppelganger_Design_v0.2.md  Doppelganger_Design_v0.3.md  dopp.txt  v0.2_updates.md
spike/: SPIKE_BRIEF.md  alibaba-edu-hpcc.Dockerfile  decision_memo.md  decision_memo_TEMPLATE.md  inet-tub.Dockerfile  parse_fct.py  run_spike.py
spike/traces/baseline/: fct.txt  sim_stdout.txt
spike/traces/injected/: config.txt  fct.txt  sim_stdout.txt
src/doppelganger/: __init__.py
src/doppelganger/adapter/: __init__.py  __main__.py  server.py
src/doppelganger/driver/: __init__.py  counters.py  host_counters.py  incomplete.py  simulation.py  types.py
src/doppelganger/driver/parsers/: __init__.py  counters.py  ecn.py  fct.py  host_counters.py  intended.py  pfc.py
src/doppelganger/eval/: __init__.py  comparison.py
src/doppelganger/scenarios/: __init__.py  builtin.py  compiler.py  topology.py  traffic.py  types.py
tests/: conftest.py  test_adapter.py  test_driver_smoke.py  test_eval_comparison.py  test_failure_scenarios.py  test_host_counters.py  test_host_counters_aggregate.py  test_intended_and_incomplete.py  test_scenarios_compiler.py  test_topology_compiler.py  test_traffic_compiler.py
