[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doppelganger"
version = "0.1.0.dev0"
description = "The NS-3 Substrate Adapter for HarnessIT"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Erik Smith"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.urls]
Homepage = "https://github.com/provandal/doppelganger"
Substrate = "https://github.com/provandal/ns3-datacenter"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_substrate: marks tests that need the doppelganger-substrate Docker image built locally",
]
